# Flipper-Zero-ESP32-Port

./: README.md  buildFap.sh
.github/workflows/: build.yml
applications/main/other_os/: application.fam  other_os_app.c
applications/main/usb_storage/: usb_storage_app.c
applications/main/wifi_app/scenes/: scene_spam_ssids_menu.c
applications/main/wlan_app/: wlan_app.c  wlan_app.h  wlan_cred_sniff.c  wlan_cred_sniff.h  wlan_evil_portal.c  wlan_hal.c  wlan_hal.h  wlan_html_inject.c  wlan_html_inject.h  wlan_mitm_server.c  wlan_mitm_server.h
applications/main/wlan_app/scenes/: scene_evil_portal.c  scene_evil_portal_menu.c  scene_live_creds.c  scene_mitm_menu.c
applications/main/wlan_app/views/: wlan_evil_portal_view.c  wlan_live_creds_view.c  wlan_portscan_view.c  wlan_view_events.h
applications/services/desktop/: desktop.c
components/flipper_application/: CMakeLists.txt
components/flipper_application/flipper_application/: firmware_api.c  flipper_application.c
components/furi_hal/: furi_hal.c  furi_hal_display.c  furi_hal_usb_msc.c  idf_component.yml
components/furi_hal/boards/: board_esp32s3_6buttons.h  esp32s3_6buttons.c  esp32s3_6buttons.h
components/loader/: loader_applications.c
